--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
@@ -110,7 +110,7 @@
                     <Insets left="10.0" right="10.0" />
                 </GridPane.margin>
             </JFXComboBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <Text fill="#e1a9a9" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -120,7 +120,7 @@
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Food:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
+            <Text fill="#e1a9a9" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Food:" GridPane.halignment="RIGHT" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
