--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/GiftAndFloralServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/GiftAndFloralServiceRequestPage.fxml
@@ -109,7 +109,7 @@
                     <Insets left="10.0" right="10.0" />
                 </GridPane.margin>
             </JFXComboBox>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <Text fill="#e1a9a9" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="* Patient Name:" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
