--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/InternalPatientTransportationServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/InternalPatientTransportationServiceRequestPage.fxml
@@ -136,11 +136,11 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
                 </GridPane.margin>
             </AutoCompleteTextField>
-            <TextField fx:id="patientName" promptText="Enter patient name..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <AutoCompleteTextField fx:id="patientName" promptText="Enter patient name..." GridPane.columnIndex="1" GridPane.rowIndex="4">
                 <GridPane.margin>
-                    <Insets left="10.0" right="10.0" />
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
                 </GridPane.margin>
-            </TextField>
+            </AutoCompleteTextField>
         </children>
     </GridPane>
 </children>
