--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/FoodDeliveryServiceRequestPage.fxml
@@ -15,7 +15,7 @@
 
 <?import edu.wpi.teame.view.controllers.AutoCompleteTextField?>
 
-<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0" styleClass="grid-pane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.FoodDeliveryServiceRequestPageServiceRequestController">   <children>
+<AnchorPane fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseEntered="#updateFromDB" prefHeight="580.0" prefWidth="800.0"  stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.serviceRequests.FoodDeliveryServiceRequestPageServiceRequestController">   <children>
     <GridPane fx:id="gridPane" layoutX="6.0" layoutY="6.0" prefHeight="580.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,7 +46,7 @@
                     <Font size="16.0" />
                 </font>
             </Button>
-            <TextArea fx:id="additionalInfo" maxWidth="1.7976931348623157E308" prefHeight="105.0" prefWidth="247.0" promptText="Add any additional info..." styleClass="text-area" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="8">
+            <TextArea fx:id="additionalInfo" maxWidth="1.7976931348623157E308" prefHeight="105.0" prefWidth="247.0" promptText="Add any additional info..."  wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="8">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </GridPane.margin>
@@ -64,7 +64,7 @@
                     <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
                 </GridPane.margin>
             </AutoCompleteTextField>
-            <AutoCompleteTextField fx:id="assignee" promptText="Enter an assignee..." styleClass="jfx-combo-box" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <AutoCompleteTextField fx:id="assignee" promptText="Enter an assignee..."  GridPane.columnIndex="1" GridPane.rowIndex="3">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="14.0" />
                 </GridPane.margin>
@@ -79,27 +79,27 @@
                     <Insets left="10.0" right="10.0" />
                 </GridPane.margin>
             </JFXComboBox>
-            <TextField fx:id="food" promptText="Enter food..." styleClass="text-box" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <TextField fx:id="food" promptText="Enter food..."  GridPane.columnIndex="1" GridPane.rowIndex="5">
                <GridPane.margin>
                   <Insets left="10.0" right="10.0" />
                </GridPane.margin>
             </TextField>
-            <Label fx:id="requestDateT" text="Request Date: *" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+            <Label fx:id="requestDateT" text="Request Date: * " GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="assigneeT" text="Assignee: *" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+            <Label fx:id="assigneeT" text="Assignee: * " GridPane.halignment="RIGHT" GridPane.rowIndex="3">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="locationT" text="Location: *" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+            <Label fx:id="locationT" text="Location: * " GridPane.halignment="RIGHT" GridPane.rowIndex="2">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="patientNameT" text="Patient Name: *" GridPane.halignment="RIGHT" GridPane.rowIndex="4">
+            <Label fx:id="patientNameT" text="Patient Name: * " GridPane.halignment="RIGHT" GridPane.rowIndex="4">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
@@ -114,7 +114,7 @@
                   <Insets right="10.0" />
                </GridPane.margin>
             </Label>
-            <Label fx:id="statusT" text="Status: *" GridPane.halignment="RIGHT" GridPane.rowIndex="7">
+            <Label fx:id="statusT" text="Status: * " GridPane.halignment="RIGHT" GridPane.rowIndex="7">
                <GridPane.margin>
                   <Insets right="10.0" />
                </GridPane.margin>
