--- a/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SettingsPage.fxml
+++ b/MedicalTrackingApp/src/main/resources/edu/wpi/teame/view/tabs/SettingsPage.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="wholePane" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.SettingsPageController">
+<AnchorPane fx:id="wholePane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" stylesheets="@../../css/mainStyle.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.teame.view.controllers.SettingsPageController">
     <children>
         <GridPane alignment="CENTER" layoutY="7.0" prefHeight="580.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -68,12 +68,12 @@
                   <Insets left="10.0" />
                </padding>
             </ComboBox>
-            <JFXButton fx:id="writeToCSVButton" alignment="CENTER" onAction="#writeToCSV" prefHeight="40.0" prefWidth="150.0" text="Write To CSV" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <JFXButton fx:id="writeToCSVButton" alignment="CENTER" onAction="#writeToCSV" prefHeight="40.0" prefWidth="150.0" text="Write To CSV" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="loadFromCSVButton" alignment="CENTER" onAction="#loadFromCSV" prefHeight="40.0" prefWidth="150.0" text="Load From CSV" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <JFXButton fx:id="loadFromCSVButton" alignment="CENTER" onAction="#loadFromCSV" prefHeight="40.0" prefWidth="150.0" text="Load From CSV" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP">
                <font>
                   <Font name="System Bold" size="16.0" />
                </font>
